# vortex-engine

./: Makefile  Makefile.in  ProjectHome.md  ResourceManagement.md  Vortex.sln  config.h.in  config.h.in~  configure  configure.ac  vortex-engine.vcxproj  vortex-engine.vcxproj.filters
Debug/: vortex_core.lib  vortex_unittest.ilk
Vortex/: Vortex.vcxproj  Vortex.vcxproj.filters
Vortex/Debug/: CL.read.1.tlog  lib.command.1.tlog  vc100.idb
Vortex/datatypes/: matrix.cpp  vector2.cpp  vector4.cpp
Vortex/include/: vtx_assertions.h  vtx_types.h
Vortex/math/: math.cpp
Vortex/src/: matrix.cpp  stack_allocator.cpp
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
google_test/: google_test.vcxproj  google_test.vcxproj.filters
google_test/Debug/: Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
include/: vtx_texture.h
include/core/: vtx_assertions.h  vtx_eventoutput.h  vtx_math.h  vtx_matrix4x4.h  vtx_stack_allocator.h  vtx_types.h  vtx_vector2.h  vtx_vector3.h  vtx_vector4.h
include/platform/: vtx_atomic.h  vtx_defineconfig.h  vtx_filestream.h  vtx_filesystem.h  vtx_iostream.h  vtx_signal.h  vtx_thread.h  vtx_timer.h
include/vortex/: vtx_camera.h  vtx_clock.h  vtx_dx10render.h  vtx_job.h  vtx_jobprocessor.h  vtx_nativewindow.h  vtx_openglrender.h  vtx_render.h  vtx_renderinternal.h  vtx_rendermanager.h  vtx_resource.h  vtx_simulation.h  vtx_vbuffer.h  vtx_vertexposnormtex.h  vtx_vortex.h  vtx_vortexbase.h  vtx_window.h  vtx_windowcreationparams.h
ipch/vortex-440ced13/: vortex_core-373798dc.ipch
src/: Makefile  Makefile.am  Makefile.in
src/concurrency/: jobmanager.cpp  jobprocessor.cpp  signal.cpp  thread.cpp  vtx_job.h  vtx_jobmanager.h  vtx_signal.h
src/content/: content.cpp  contentpackage.cpp  resource.cpp  resourcemanager.cpp  resourcesystem.cpp  vtx_content.h  vtx_contentpackage.h  vtx_resource.h  vtx_resourcemanager.h
src/core/: blob.cpp  clock.cpp  concurrent_queue.cpp  cvarsystem.cpp  eventoutput.cpp  math.cpp  matrix.cpp  simulationmanager.cpp  stack_allocator.cpp  standardallocator.cpp  timer.cpp  util.cpp  vector2.cpp  vector3.cpp  vector4.cpp  vortex_root.cpp  vtx_allocator.h  vtx_assertions.h  vtx_clock.h  vtx_cvarsystem.h  vtx_eventoutput.h  vtx_math.h  vtx_matrix4x4.h  vtx_nativewindow.h  vtx_simulationmanager.h  vtx_stack_allocator.h  vtx_standardallocator.h  vtx_types.h  vtx_util.h  vtx_vector3.h  vtx_vector4.h  vtx_vortex.h  vtx_vortexbase.h  window.cpp  windowcreationparams.cpp  winmain.cpp
src/graphics/: openglrender.cpp  render.cpp  vtx_dx10effect.h  vtx_dx10render.h  vtx_effect.h  vtx_openglrender.h  vtx_renderapi.h  vtx_rendermanager.h  vtx_vertexposnormtex.h
src/io/: filestream.cpp  iostream.cpp  vtx_filesystem.h  vtx_iostream.h
src/platform/: file.cpp  filestream.cpp  filesystem.cpp  iostream.cpp  signal.cpp  thread.cpp  timer.cpp
src/text/: string.cpp  stringutil.cpp  vtx_string.h
src/text/utf8/: checked.h
src/vortex/: camera3d.cpp  clock.cpp  dx10render.cpp  job.cpp  jobmanager.cpp  openglrender.cpp  render.cpp  rendercreationparams.cpp  simulation.cpp  simulationmanager.cpp  vertexposnormtex.cpp  vortex_root.cpp  window.cpp  windowcreationparams.cpp
trunk/: Makefile  Makefile.in  ReadMe.txt  Vortex.opensdf  Vortex.sln  config.h  config.status  configure  vortex-engine.vcxproj  vortex-engine.vcxproj.filters
trunk/Debug/: google_test.lib
trunk/Vortex/: Vortex.vcxproj.filters
trunk/autom4te.cache/: output.1  output.2  traces.1
trunk/google_test/: ReadMe.txt  google_test.vcxproj
trunk/include/: vtx_texture.h
trunk/src/: Makefile.am  Makefile.in
trunk/src/concurrency/: job.cpp  jobmanager.cpp  vtx_concurrent_queue.h  vtx_jobprocessor.h  vtx_thread.h
trunk/src/content/: content.cpp  contentpackage.cpp  effect.cpp  resource.cpp  vtx_content.h  vtx_contentpackage.h  vtx_resource.h  vtx_resourcesystem.h
trunk/src/core/: assertions.cpp  blob.cpp  camera3d.cpp  cvarsystem.cpp  eventoutput.cpp  math.cpp  matrix.cpp  simulationmanager.cpp  stack_allocator.cpp  standardallocator.cpp  util.cpp  vector2.cpp  vector3.cpp  vector4.cpp  vortex_root.cpp  vtx_allocator.h  vtx_assertions.h  vtx_atomic.h  vtx_blob.h  vtx_buildconfig.h  vtx_camera.h  vtx_cvarsystem.h  vtx_eventoutput.h  vtx_nativewindow.h  vtx_platform.h  vtx_stack_allocator.h  vtx_standardallocator.h  vtx_timer.h  vtx_vector2.h  vtx_vortex.h  vtx_windowcreationparams.h  window.cpp  windowcreationparams.cpp
trunk/src/graphics/: dx10effect.cpp  dx10render.cpp  openglrender.cpp  render.cpp  rendercreationparams.cpp  renderinternal.cpp  vertexposnormtex.cpp  vtx_d3d10vertexbuffer.h  vtx_dx10render.h  vtx_effect.h  vtx_rendercreationparams.h  vtx_vbuffer.h
trunk/src/io/: file.cpp  filestream.cpp  filesystem.cpp  iostream.cpp  vtx_filestream.h  vtx_filesystem.h
trunk/src/platform/: file.cpp  filestream.cpp  filesystem.cpp  iostream.cpp  signal.cpp  thread.cpp  timer.cpp
trunk/src/text/: string.cpp  stringutil.cpp  utf8.h  vtx_string.h  vtx_stringutil.h
trunk/src/vortex/: camera3d.cpp  clock.cpp  dx10render.cpp  job.cpp  jobmanager.cpp  jobprocessor.cpp  openglrender.cpp  render.cpp  renderinternal.cpp  resource.cpp  simulation.cpp  vortex_root.cpp  window.cpp  windowcreationparams.cpp
trunk/vortex/: ReadMe.txt  (+2 more)
trunk/vortex_unittest/: Makefile.am  main.cpp  matrix_tests.cpp  vortex_unittest.vcxproj  vortex_unittest.vcxproj.filters
trunk/vortex_unittest/Debug/: cl.command.1.tlog  link.command.1.tlog  mt.command.1.tlog  mt.write.1.tlog
trunk/vortex_unittest/src/: concurrent_queue.cpp  content.cpp  cvarsystem_tests.cpp  io.cpp  jobmanager.cpp  memory_tests.cpp  rendermanager_tests.cpp  root.cpp  vector3_tests.cpp
vortex/: vortex.vcxproj  vortex.vcxproj.filters
vortex_core/: Makefile  ReadMe.txt  config.status  configure  configure.ac
vortex_platform_independence/: Makefile  configure  file.cpp  vortex_platform_independence.vcxproj  vortex_platform_independence.vcxproj.filters
vortex_unittest/: main.cpp  matrix_tests.cpp  vortex_unittest.vcxproj  vortex_unittest.vcxproj.filters
wiki/: ResourceManagement.wiki
(+174 files in other folders)
